--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
         "oh-vue-icons": "^1.0.0-rc3",
         "pinia": "^2.0.35",
         "typescript": "^5.0.4",
+        "vue-i18n": "^9.2.2",
         "vue-material-design-icons": "^5.2.0",
+        "vue-toastification": "^2.0.0-rc.5",
         "vuetify": "^3.2.1"
     }
 }
